@@ -3,6 +3,8 @@ debhelper (9.20160618.1+unreleased) UNRELEASED; urgency=medium
   * Start on compat 11.
   * dh_installmenu: Stop installing menu files in compat 11
     (menu-methods are still installed).
+  * dh_*: Deprecate -s in favor of -a.  The -s option is
+    removed in compat 11.
 
  -- Niels Thykier <niels@thykier.net>  Sat, 18 Jun 2016 21:10:26 +0000
 
